* Upgraded to the latest Blazor 3.2.0-preview5 * Updated to the latest Microsoft.Web.WebView2.0.9.488 * Upgraded to the latest npms

--- a/src/BlazorWebView.JS/BlazorWebView.JS.csproj
+++ b/src/BlazorWebView.JS/BlazorWebView.JS.csproj
@@ -34,6 +34,18 @@
     <WebpackInputs Include="**\*.ts" Exclude="node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="package-lock.json" />
+    <Content Include="package.json" />
+    <Content Include="tsconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include=".gitignore" />
+    <None Include="HowToUpdateUpstreamFiles.md" />
+    <None Include="webpack.config.js" />
+  </ItemGroup>
+
 
   <Target Name="EnsureNpmRestored" Condition="!Exists('node_modules')">
     <Message Importance="high" Text="Restoring dependencies using 'npm'. This may take several minutes..." />
