--- a/sample/BlazorApp/BlazorApp.csproj
+++ b/sample/BlazorApp/BlazorApp.csproj
@@ -27,14 +27,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0-preview4.20210.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0-preview5.20216.8" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-      <PackageReference Include="BlazorWebView" Version="0.2.0-preview5">
-    </PackageReference>  
+      <PackageReference Include="BlazorWebView" Version="0.2.0-preview6">
+    </PackageReference>
+      <PackageReference Include="System.Net.Http.Json" Version="3.2.0-preview5.20210.3" />  
     </ItemGroup>
   
 </Project>
