--- a/src/BlazorWebView.JS/package.json
+++ b/src/BlazorWebView.JS/package.json
@@ -10,13 +10,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@dotnet/jsinterop": "3.0.0-preview9.19423.4",
+    "@dotnet/jsinterop": "3.1.3",
     "@types/base64-arraybuffer": "^0.1.0",
-    "base64-arraybuffer": "^0.1.5",
-    "ts-loader": "^4.4.1",
+    "base64-arraybuffer": "^0.2.0",
+    "ts-loader": "^7.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.5.3",
-    "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.6"
+    "typescript": "^3.8.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
