--- a/sample/BlazorApp.Wpf/Properties/launchSettings.json
+++ b/sample/BlazorApp.Wpf/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "BlazorApp.Wpf": {
       "commandName": "Project",
-      "nativeDebugging": false
+      "nativeDebugging": true
     }
   }
 }
