--- a/.github/workflows/corewindows.yml
+++ b/.github/workflows/corewindows.yml
@@ -31,9 +31,6 @@ jobs:
     - name: Build BlazorWebView
       working-directory: ./src/BlazorWebView/
       run: dotnet build --configuration Release
-    - name: Pack BlazorWebView
-      working-directory: ./src/BlazorWebView/
-      run: dotnet pack --configuration Release
     - name: BlazorWebView.Native configure32
       working-directory: ./build/
       run: ./native.cmd
@@ -44,4 +41,6 @@ jobs:
          MsBuild.exe BlazorWebView.Wpf.csproj /t:Build /p:Configuration=Release
     - name: Push BlazorWebView nuget packages
       working-directory: ./
-      run: dotnet nuget push **/packages/*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+      run: |
+        dotnet nuget push src/BlazorWebView/packages/BlazorWebView.*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
+        dotnet nuget push src/BlazorWebView.Wpf/packages/BlazorWebView.Wpf.*.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json
