--- a/sample/BlazorApp/BlazorApp.csproj
+++ b/sample/BlazorApp/BlazorApp.csproj
@@ -32,9 +32,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-      <PackageReference Include="BlazorWebView" Version="0.2.0-preview7">
+      <PackageReference Include="BlazorWebView" Version="0.2.0-preview8">
     </PackageReference>
-      <PackageReference Include="System.Net.Http.Json" Version="5.0.0-preview.3.20214.6" />  
+      <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />  
     </ItemGroup>
   
 </Project>
