--- a/src/BlazorWebView.JS/package.json
+++ b/src/BlazorWebView.JS/package.json
@@ -10,12 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@dotnet/jsinterop": "3.1.3",
+    "@dotnet/jsinterop": "^3.1.4",
     "@types/base64-arraybuffer": "^0.1.0",
     "base64-arraybuffer": "^0.2.0",
-    "ts-loader": "^7.0.1",
+    "ts-loader": "^7.0.5",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
-    "typescript": "^3.8.3",
+    "typescript": "^3.9.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
