--- a/src/BlazorWebView.JS/upstream/aspnetcore/web.js/package.json
+++ b/src/BlazorWebView.JS/upstream/aspnetcore/web.js/package.json
@@ -17,19 +17,19 @@
     "@aspnet/signalr": "link:../../SignalR/clients/ts/signalr",
     "@aspnet/signalr-protocol-msgpack": "link:../../SignalR/clients/ts/signalr-protocol-msgpack",
     "@dotnet/jsinterop": "https://dotnet.myget.org/F/aspnetcore-dev/npm/@dotnet/jsinterop/-/@dotnet/jsinterop-3.0.0-preview9.19415.3.tgz",
-    "@types/emscripten": "0.0.31",
-    "@types/jest": "^24.0.6",
-    "@types/jsdom": "11.0.6",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
-    "eslint": "^5.16.0",
-    "jest": "^24.8.0",
-    "rimraf": "^2.6.2",
-    "ts-jest": "^24.0.0",
-    "ts-loader": "^4.4.1",
-    "typescript": "^3.5.3",
-    "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.6"
+    "@types/emscripten": "^1.39.4",
+    "@types/jest": "^25.2.3",
+    "@types/jsdom": "^16.2.3",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
+    "jest": "^26.0.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.0.0",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "resolutions": {
     "**/set-value": "^2.0.1"
