--- a/sample/BlazorApp.Mac/BlazorApp.Mac.csproj
+++ b/sample/BlazorApp.Mac/BlazorApp.Mac.csproj
@@ -104,7 +104,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="BlazorWebView.Mac">
-      <Version>0.2.0-preview9</Version>
+      <Version>0.2.0</Version>
     </PackageReference>
     <PackageReference Include="System.Memory" Version="4.5.4" IncludeAssets="None" />
   </ItemGroup>
