--- a/sample/BlazorApp.Wpf/BlazorApp.Wpf.csproj
+++ b/sample/BlazorApp.Wpf/BlazorApp.Wpf.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BlazorWebView.Wpf" Version="0.2.0-preview9" />
+    <PackageReference Include="BlazorWebView.Wpf" Version="0.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
